# support-fastapi

./: .gitignore  ProcFile  README.md  logging.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 39a5042bd099_.py  553907642bcf_added_tabs_explanation_instructions.py  f97e57bc1470_added_education_days_and_education_tasks.py
src/: __main__.py  app.py  errors.py  settings.py
src/controllers/: category.py  education.py  task.py  user.py
src/database/: database.py
src/database/models/: models.py
src/routes/: authentication.py  categories.py  education.py  tasks.py  user.py
src/schema/categories/: schema.py
src/schema/documentation/: schema.py
src/schema/education/: schema.py
src/schema/explanation/: schema.py
src/schema/instruction/: schema.py
src/schema/tabs/: schema.py
src/schema/task/: schema.py
src/schema/token/: schema.py
src/schema/user/: schema.py
src/security/: password.py  token.py
